--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <img src="images/players/player-1.png" alt="player-1">
                 <h2 class="player-name">Neymar Jr</h2>
                 <p class="player-detail">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci hic ex nisi laudantium quod rem et quidem maiores id accusamus.
+                    I needed to remove the thorn of being able to achieve something with the national team,.I had been close for other years and I knew it was going to happen. 
                 </p>
             </div>
 
@@ -74,7 +74,7 @@
                 <img src="images/players/player-2.png" alt="player-1">
                 <h2 class="player-name">Lionel Messi</h2>
                 <p class="player-detail">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci hic ex nisi laudantium quod rem et quidem maiores id accusamus.
+                    I needed to remove the thorn of being able to achieve something with the national team,.I had been close for other years and I knew it was going to happen.
                 </p>
             </div>
 
@@ -84,7 +84,7 @@
                 <img src="images/players/player-3.png" alt="player-1">
                 <h2 class="player-name">Cristiano Ronaldo</h2>
                 <p class="player-detail">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci hic ex nisi laudantium quod rem et quidem maiores id accusamus.
+                    I needed to remove the thorn of being able to achieve something with the national team,.I had been close for other years and I knew it was going to happen.
                 </p>
             </div>
 
@@ -94,7 +94,7 @@
                 <img src="images/players/player-4.png" alt="player-1">
                 <h2 class="player-name">Paulo Dybala</h2>
                 <p class="player-detail">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci hic ex nisi laudantium quod rem et quidem maiores id accusamus.
+                    I needed to remove the thorn of being able to achieve something with the national team,.I had been close for other years and I knew it was going to happen.
                 </p>
             </div>
 
@@ -104,7 +104,7 @@
                 <img src="images/players/player-5.png" alt="player-1">
                 <h2 class="player-name">Mesut Ozil </h2>
                 <p class="player-detail">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci hic ex nisi laudantium quod rem et quidem maiores id accusamus.
+                    I needed to remove the thorn of being able to achieve something with the national team,.I had been close for other years and I knew it was going to happen.
                 </p>
             </div>
 
@@ -114,7 +114,7 @@
                 <img src="images/players/player-6.png" alt="player-1">
                 <h2 class="player-name">Mauro Icardi </h2>
                 <p class="player-detail">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci hic ex nisi laudantium quod rem et quidem maiores id accusamus.
+                    I needed to remove the thorn of being able to achieve something with the national team,.I had been close for other years and I knew it was going to happen.
                 </p>
             </div>
 
@@ -124,7 +124,7 @@
                 <img src="images/players/player-7.png" alt="player-1">
                 <h2 class="player-name">Di Maria</h2>
                 <p class="player-detail">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci hic ex nisi laudantium quod rem et quidem maiores id accusamus.
+                    I needed to remove the thorn of being able to achieve something with the national team,.I had been close for other years and I knew it was going to happen.
                 </p>
             </div>
 
@@ -134,7 +134,7 @@
                 <img src="images/players/player-8.png" alt="player-1">
                 <h2 class="player-name">Kylian Mbappé</h2>
                 <p class="player-detail">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci hic ex nisi laudantium quod rem et quidem maiores id accusamus.
+                    I needed to remove the thorn of being able to achieve something with the national team,.I had been close for other years and I knew it was going to happen.
                 </p>
             </div>
 
@@ -144,7 +144,7 @@
                 <img src="images/players/player-9.png" alt="player-1">
                 <h2 class="player-name">Mohamed Salah</h2>
                 <p class="player-detail">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci hic ex nisi laudantium quod rem et quidem maiores id accusamus.
+                    I needed to remove the thorn of being able to achieve something with the national team,.I had been close for other years and I knew it was going to happen.
                 </p>
             </div>
 
@@ -154,7 +154,7 @@
                 <img src="images/players/player-10.png" alt="player-1">
                 <h2 class="player-name">Harry Kane</h2>
                 <p class="player-detail">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci hic ex nisi laudantium quod rem et quidem maiores id accusamus.
+                    I needed to remove the thorn of being able to achieve something with the national team,.I had been close for other years and I knew it was going to happen.
                 </p>
             </div>
 
@@ -164,7 +164,7 @@
                 <img src="images/players/player-11.png" alt="player-1">
                 <h2 class="player-name">Kevin De Bruyne</h2>
                 <p class="player-detail">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci hic ex nisi laudantium quod rem et quidem maiores id accusamus.
+                    I needed to remove the thorn of being able to achieve something with the national team,.I had been close for other years and I knew it was going to happen.
                 </p>
             </div>
 
@@ -173,7 +173,7 @@
                 <img src="images/players/player-12.png" alt="player-1">
                 <h2 class="player-name">Philippe Coutinho</h2>
                 <p class="player-detail">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci hic ex nisi laudantium quod rem et quidem maiores id accusamus.
+                    I needed to remove the thorn of being able to achieve something with the national team,.I had been close for other years and I knew it was going to happen.
                 </p>
             </div>
 
