--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
         <div class="left-side">
            <nav>
                <ul class=nav-buttons>
-                   <li> <button class="nav-button"> Home  </button> </li>
-                   <li> <button class="nav-button"> Clubs  </button> </li>
-                   <li> <button class="nav-button">  World Cup 2023  </button> </li>
-                   <li> <button class="nav-button"> Upcomming Matches </button> </li>
-                   <li> <button class="nav-button"> Contact </button> </li>
+                 <a href="https://copaamerica.com/">  <li> <button class="nav-button"> Home  </button> </li></a>
+                  <a href="https://copaamerica.com/en/groups/"> <li> <button class="nav-button"> Clubs  </button> </li> </a> 
+                  <a href="https://copaamerica.com/en/news/"> <li> <button class="nav-button">  World Cup 2023  </button> </li> </a>
+                  <a href="https://copaamerica.com/en/groups/"> <li> <button class="nav-button"> Upcomming Matches </button> </li> </a>
+                  <a href="https://copaamerica.com/en/organization"> <li> <button class="nav-button"> Contact </button> </li> </a>
               
                </ul>
            </nav>
